tempo/ingress/nginx/base/tempo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-ingress
  namespace: $(namespace)
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - $(TEMPO_DOMAINNAME)
    secretName: tempo-tls
  rules:
  - host: $(TEMPO_DOMAINNAME)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tempo-distributor.monitoring.svc
            port:
              number: 3200
      - path: /opentelemetry.proto.collector.metrics.v1.MetricsService/
        pathType: prefix
        backend:
          service:
            name: tempo-gateway.monitoring.svc
            port:
              number: 4317
